# agent-keychain

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
Casks/: agent-keychain.rb
Formula/: agent-keychain.rb
agents/: README.md  install.ps1  install.sh
agents/hooks/: agent-keychain-secret-access.ps1  agent-keychain-secret-access.sh
agents/skills/agent-keychain/: SKILL.md
benches/: vault.rs
src/: cli.rs  config.rs  crypto.rs  daemon.rs  lib.rs  main.rs  paths.rs  tui.rs  vault.rs
tests/: cli.rs
