[package]
name = "agent-keychain"
version = "0.1.0"
edition = "2021"
description = "A local, encrypted, agent-friendly terminal keychain"
license = "MIT"

[lib]
name = "agent_keychain"
path = "src/lib.rs"

[[bin]]
name = "akc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "5.0"
rand_core = { version = "0.6", features = ["getrandom"] }
ratatui = "0.29"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zeroize = "1.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
