[package]
name = "agent-keychain"
version = "0.2.0"
edition = "2021"
description = "A local, encrypted, agent-friendly terminal keychain"
license = "MIT"
repository = "https://github.com/Goooooooooody/agent-keychain"
homepage = "https://github.com/Goooooooooody/agent-keychain"

[lib]
name = "agent_keychain"
path = "src/lib.rs"

[[bin]]
name = "akc"
path = "src/main.rs"

[[bin]]
name = "akc-tray"
path = "src/bin/akc-tray.rs"
required-features = ["tray"]

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "5.0"
fs2 = "0.4"
interprocess = "2.4"
libc = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
ratatui = "0.29"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tempfile = "3.10"
zeroize = "1.8"
tray-icon = { version = "0.24.1", optional = true }
winit = { version = "0.30.13", optional = true }
notify-rust = { version = "4.18.0", optional = true }
tinyfiledialogs = { version = "3.9.1", optional = true }
auto-launch = { version = "0.6.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
criterion = "0.5"

[[bench]]
name = "vault"
harness = false

[features]
tray = [
    "dep:auto-launch",
    "dep:notify-rust",
    "dep:tinyfiledialogs",
    "dep:tray-icon",
    "dep:winit",
]
